# bmp-conv

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/Modules/cmocka/: FindCMocka.cmake
perf_test/: main.py  plot.py  test.py  tests.py  utils.py
scripts/: build.sh  formatter.sh  linter.sh
src/: CMakeLists.txt  main.c
src/cbmp/: cbmp.c  cbmp.h
src/convolution/: CMakeLists.txt  convolution.h
src/convolution/gpu/: conv.c  conv.h  operation.cl
src/convolution/par/: _conv.h  conv.c  conv.h
src/convolution/queue/: _conv.h  conv.c  conv.h  queue.c  queue.h
src/convolution/seq/: _conv.h  conv.c  conv.h
src/convolution/utils/: _utils.h  utils.c  utils.h
src/options/: options.c  options.h
test/: CMakeLists.txt  config.h.in  main.c  par.c  par.h  seq.c  seq.h  utils.c  utils.h
